# ZaTxGNN

./: .gitattributes  .gitignore  .scanignore  .semgrepignore  CLAUDE.md  CODEOWNERS  LICENSE  README.md  SECURITY.md  model_ckpt  pyproject.toml  pyproject.toml.template
.github/: CODEOWNERS  ddi-versions.json
.github/workflows/: check-new-evidence.yml  indexnow.yml  interaction-update-check.yml  link-check.yml  news-monitor.yml  pages.yml
config/: fields.yaml.template
data/news/: matched_news.json  synonyms.json  synonyms.json.template
data/processed/: integration_stats.json
docs/: CNAME  Gemfile  _config.yml  _config.yml.template  index.md  robots.txt
docs/.zap/: rules.tsv
docs/_drugs/: abacavir.md  acamprosate.md  acamprosate_calcium.md  acetaminophen.md  acetic_acid.md  acetylsalicylic_acid.md  acyclovir.md  adapalene.md  alanine.md  albendazole.md  alfuzosin.md  alfuzosin_hydrochloride.md  allopurinol.md  alprazolam.md  amiloride.md  amiloride_hydrochloride.md  amiodarone.md  amiodarone_hydrochloride.md  amitriptyline.md  amitriptyline_hydrochloride.md  (+638 more)
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  build_rxnorm_synonyms.py  download_mpr_data.py  drug_list.json  extract_drug_list.py  generate_drug_pages.py  generate_fhir_resources.py  generate_fhir_resources.py.template  generate_news_keywords.py  generate_search_index.py  integrate_predictions.py  prepare_external_data.py  process_fda_data.py.template  process_news.py  run_kg_prediction.py  run_kg_prediction.py.template  sync_notes_to_docs.py
(+50563 files in other folders)
